# ECS

./: .gitignore  CMakeLists.txt  Game  README  README.md  README.md~  app.c  app.h  co_component.h  co_physics.h  co_renderer.c  co_renderer.h  co_transform.c  co_transform.h  constants.h  debug.h  e_events.h  ecs.h  en_entity.c  en_entity.h  helpers.h  main.c  makefile  mn_event.c  mn_manager.h  mn_render.h  mn_scene.h  ooc.h  ss_event.c  ss_event.h  ss_keyboard.h  ss_mouse.h  ss_movement.c  ss_render.c  ss_render.h
components/: co_component.c  co_component.h  co_physics.c  co_physics.h  co_renderer.c  co_renderer.h  co_transform.c  co_transform.h  component.c  component.h  physics.c  physics.h  renderer.c  renderer.h  transform.c  transform.h
entities/: en_entity.c  en_entity.h  en_entity.h~  entity.c  entity.h
managers/: eventmanager.c  eventmanager.h  manager.c  manager.h  mn_event.c  mn_event.h  mn_manager.c  mn_manager.h  mn_render.c  mn_render.h  mn_scene.c  rendermanager.c  rendermanager.h
src/: app.c  app.h  co_component.c  co_component.h  co_physics.c  co_physics.h  debug.h  ecs.h  en_entity.c  mn_event.c  mn_manager.c  mn_render.c  mn_scene.c  mn_scene.h  ss_event.h  ss_mouse.c  ss_movement.h  ss_render.c  ss_render.h  ss_subsystem.c
subsystems/: e_events.h  keyboardsubsystem.c  keyboardsubsystem.h  mousesubsystem.c  mousesubsystem.h  ss_event.c  ss_event.h  ss_keyboard.c  ss_keyboard.h  ss_mouse.c  ss_mouse.h  ss_render.c  ss_render.h  ss_subsystem.c  ss_subsystem.h  subsystem.c  subsystem.h
